fix: always show scrollbar not to resize contents in chrome

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -3,8 +3,10 @@
 @import 'tailwindcss/utilities';
 
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
+
 @layer base {
 	html {
 		font-family: 'pretendard', system-ui, sans-serif;
+		overflow-y: scroll;
 	}
 }
